--- a/src/app/Modules/client/cart/cart.component.html
+++ b/src/app/Modules/client/cart/cart.component.html
@@ -107,14 +107,10 @@
   
                 <div class="row">
                   <div class="col-md-12">
-                    <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='./client/checkout'">Thanh Toán khi nhận hàng</button>
+                    <button class="btn btn-black btn-lg py-3 btn-block" (click)="checkout()">Thanh Toán</button>
                   </div>
-                </div> <br>
-                <div class="row">
-                  <div class="col-md-12">
-                    <button class="btn btn-black btn-lg py-3 btn-block"  onclick="window.location='#'">Thanh toán VNPay</button>
-                  </div>
-                </div>
+                </div> 
+                
               </div>
             </div>
           </div>
