--- a/src/app/Modules/client/checkout/checkout.component.html
+++ b/src/app/Modules/client/checkout/checkout.component.html
@@ -92,10 +92,11 @@
                   <input  cols="30" rows="5" type="text" class="form-control" id="ghichu" formControlName="ghichu" placeholder="Nhập vào ghi chú của bạn...">
                 </div>
                 <div class="form-group">
-                  <button class="btn btn-black btn-lg py-3 btn-block"  type="submit" >Thanh Toán</button>
+                  <button class="btn btn-black btn-lg py-3 btn-block"  type="submit" >Thanh Toán Khi Nhận Hàng</button>
                 </div>
-               
-
+                <div class="form-group">
+                  <button class="btn btn-black btn-lg py-3 btn-block"  type="submit" >Thanh Toán Bằng VNPay</button>
+                </div>    
               </div>
             </form>
           </div>
